# qa-auto-engineer-python-project-314

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: sonarcloud.yml
code/tests/: test_labels.py  test_smoke.py  test_tasks.py
code/tests/pages/: base_page.py  tasks_page.py  users_page.py
code/tests/support/: factories.py  session.py
tests/: conftest.py  test_auth.py  test_statuses.py  test_support_and_config_logic.py  test_task_form_page_unit.py  test_tasks.py  test_users.py
tests/pages/: base_page.py  dashboard_page.py  label_form_page.py  labels_page.py  login_page.py  resource_list_page.py  status_form_page.py  statuses_page.py  task_form_page.py  tasks_page.py  user_form_page.py
tests/support/: factories.py  session.py
