[project]
name = "hexlet-code"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "selenium>=4.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["code"]
testpaths = ["code/tests"]

[tool.hatch.build]
sources = ["code"]

[tool.hatch.build.targets.wheel]
packages = ["tests"]
