[project]
name = "hexlet-code"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.0",
    "selenium>=4.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Local: tests live in ./tests. Hexlet Docker mounts the repo under ./code, so tests are ./code/tests.
[tool.pytest.ini_options]
pythonpath = [".", "code"]
testpaths = ["tests", "code/tests"]

[tool.coverage.run]
source = ["tests"]
branch = true

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["tests"]
